--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,11 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.5.0
-numpy==2.1.0
-opencv-python==4.10.0.84
+numpy
+opencv-python-headless
 packaging==24.1
 pandas==2.2.2
-pillow==10.4.0
+pillow
 protobuf==5.27.3
 pyarrow==17.0.0
 pydeck==0.9.1
@@ -36,7 +36,7 @@ scikit-learn==1.5.1
 scipy==1.14.0
 six==1.16.0
 smmap==5.0.1
-streamlit==1.37.1
+streamlit
 tenacity==8.5.0
 threadpoolctl==3.5.0
 toml==0.10.2
